--- a/app/views/layouts/modalExample.html
+++ b/app/views/layouts/modalExample.html
@@ -2,26 +2,24 @@
 <html>
 <head>
   <meta charset="utf8">
-  <meta name="viewport" content="width=device-width">
-  <title>My Steroids App</title>
+  <title>Modal Example</title>
 
   <link rel="stylesheet" href="/vendor/ionic/css/ionic.css" />
   <link rel="stylesheet" href="/stylesheets/application.css" />
 
   <script src="/javascripts/onerror.js"></script>
-  <script src="/javascripts/console.log.js"></script>
 
   <!-- cordova.js is served from localhost to ensure the correct version -->
   <script src="http://localhost/cordova.js"></script>
   <script src="/components/steroids-js/steroids.js"></script>
 
-  <script src="/javascripts/application.js"></script>
+  <!-- controllers can be loaded dynamically based on the resource name -->
+  <script src="/controllers/<%= yield.controller %>.js"></script>
+
 </head>
 <body class="content">
-  <div class="padding">
-    <h1>Welcome to Steroids!</h1>
-    <a class="button button-block" ontouchend="showModal()">Open modal</a>
 
-  </div>
+  <%= yield.view %>
+
 </body>
 </html>
